hdone/objects/Appointment__c.object
<CustomObject>
    <description>Appointment scheduling</description>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Type of appointment</description>
        <inlineHelpText>Type of appointment</inlineHelpText>
        <label>Type</label>
        <referenceTo>Appointment_Type__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who made appointment</description>
        <inlineHelpText>Person who made appointment</inlineHelpText>
        <label>Consumer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Healthcare Applicant</value>
            </filterItems>
            <filterItems>
                <field>$User.CompanyName</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Name</valueField>
            </filterItems>
            <infoMessage>Default search will search only for consumers in your organization. Override to make appointments for other organizations.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Appointment Ending Time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Retroactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables creation of retroactive appointments for record keeping and reporting</description>
        <inlineHelpText>Retroactive appointment? Enables appointment dates and times in past.</inlineHelpText>
        <label>Retroactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartHour__c</fullName>
        <label>StartHour</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Appointment starting time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Total hours for appointment. Used in rollup to Schedule__c object</description>
        <formula>ROUND(MOD(( End_Time__c -  Start_Time__c )*24,24),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total hours for this appointment</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Appt-{00000000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <recordTypes>
        <fullName>In_Person</fullName>
        <active>true</active>
        <description>In Person Appointments</description>
        <label>In Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Phone Appointments</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website</fullName>
        <active>true</active>
        <description>Website appointments</description>
        <label>Website</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppointmentTimeLessThanFiveMinutes</fullName>
        <active>true</active>
        <description>Checks that Appointment is at least 5 minutes</description>
        <errorConditionFormula>(End_Time__c -  Start_Time__c) &lt; 5/1440</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Appointments must be at least 5 minutes. Please check the values in the fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndTimeBlank</fullName>
        <active>true</active>
        <description>Checks if type of appointment is Manual and End Time has no value</description>
        <errorConditionFormula>AND(ISPICKVAL(Appointment_Type__r.Type__c , &apos;Manual&apos;),  ISBLANK( End_Time__c ) )</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Because the type of Appointment is Manual a value must be entered in this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndTimeGreaterThanScheduleEnd</fullName>
        <active>true</active>
        <errorConditionFormula>End_Time__c &gt;  Schedule__r.EndDateTime__c</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Appointment time outside of window</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndTimeInPast</fullName>
        <active>true</active>
        <description>Checks to ensure End Time not entered in past unless retroactive appointment.</description>
        <errorConditionFormula>AND( Retroactive__c = False,   End_Time__c &lt; NOW())</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>The End Time cannot be in the past unless this is a retroactive appointment. Please change the information as needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartTimeInPast</fullName>
        <active>true</active>
        <description>Checks to ensure Start Time not entered in past unless retroactive appointment.</description>
        <errorConditionFormula>AND( Retroactive__c = False,  Start_Time__c &lt; NOW())</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>The Start Time cannot be in the past unless this is a retroactive appointment. Please change the information as needed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartTimeLessThanScheduleStart</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Time__c &lt; Schedule__r.StartDateTime__c</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Appointment time outside of window</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusBlank</fullName>
        <active>true</active>
        <description>Ensures that a value for Status is picked</description>
        <errorConditionFormula>ISBLANK(TEXT( Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please select an Appointment status</errorMessage>
    </validationRules>
</CustomObject>